--- a/QuickFitness/app/src/main/res/layout-land/activity_login.xml
+++ b/QuickFitness/app/src/main/res/layout-land/activity_login.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_accent">
+    android:background="@color/purple_accent"
+    tools:context=".LogInActivity">
 
     <TextView
         android:id="@+id/textView7"
