--- a/QuickFitness/app/src/main/res/layout/routine_card_list.xml
+++ b/QuickFitness/app/src/main/res/layout/routine_card_list.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:context=".RoutinesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/routineCardList"
