--- a/QuickFitness/app/src/main/res/menu/bottom_menu.xml
+++ b/QuickFitness/app/src/main/res/menu/bottom_menu.xml
@@ -3,12 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/fragment_home"
         android:icon="@drawable/icon_home"
         android:title="@string/home" />
     <item
+        android:id="@+id/fragment_search"
         android:icon="@drawable/icon_search_white"
         android:title="@string/search" />
     <item
+        android:id="@+id/fragment_favourites"
         android:icon="@drawable/icon_favourite_white"
         android:title="@string/favourites"/>
     <item
