--- a/QuickFitness/app/src/main/res/layout/activity_main.xml
+++ b/QuickFitness/app/src/main/res/layout/activity_main.xml
@@ -24,24 +24,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/purple_accent"
+        app:itemIconTint="@android:color/tab_indicator_text"
+        app:itemTextColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_menu"/>
-
-<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
-<!--        android:id="@+id/bottomNavBar"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@color/purple_accent"-->
-<!--        app:itemIconTint="@color/white"-->
-<!--        app:itemTextColor="#FFFFFF"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="1.0"-->
-<!--        app:menu="@menu/bottom_menu" />-->
+        app:menu="@menu/bottom_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
