--- a/QuickFitness/app/src/main/res/navigation/my_nav.xml
+++ b/QuickFitness/app/src/main/res/navigation/my_nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nav"
-    app:startDestination="@id/fragment_home">
+    app:startDestination="@id/routineListFragment">
 
     <activity
         android:id="@+id/logInActivity"
@@ -31,10 +31,6 @@
         android:label="fragment_exercise"
         tools:layout="@layout/fragment_exercise" />
     <fragment
-        android:id="@+id/routinesFragment"
-        android:name="ar.edu.itba.quickfitness.RoutinesFragment"
-        android:label="RoutinesFragment" />
-    <fragment
         android:id="@+id/fragment_home"
         android:name="ar.edu.itba.quickfitness.MainFragment"
         android:label="MainFragment"
@@ -49,5 +45,10 @@
         android:name="ar.edu.itba.quickfitness.FavouritesFragment"
         android:label="FavouritesFragment"
         tools:layout="@layout/fragment_favourites"/>
+    <fragment
+        android:id="@+id/routineListFragment"
+        android:name="ar.edu.itba.quickfitness.RoutineListFragment"
+        android:label="fragment_routine_list"
+        tools:layout="@layout/fragment_routine_list" />
 
 </navigation>
