--- a/QuickFitness/app/src/main/res/layout/activity_exercise.xml
+++ b/QuickFitness/app/src/main/res/layout/activity_exercise.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ExerciseActivity">
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomExerciseAppBar"
@@ -52,6 +53,7 @@
         android:layout_marginTop="64dp"
         android:background="#00FFFFFF"
         android:contentDescription="@string/next_exercise"
+        android:clickable="true"
         android:src="@drawable/icon_right_arrow_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/bottomExerciseAppBar"
@@ -67,6 +69,7 @@
         android:layout_marginTop="52dp"
         android:background="#00FFFFFF"
         android:contentDescription="@string/last_exercise"
+        android:clickable="true"
         android:src="@drawable/icon_left_arrow_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/pauseButton"
@@ -107,6 +110,7 @@
         android:layout_height="73dp"
         android:background="#00FFFFFF"
         android:backgroundTint="#FFFFFF"
+        android:clickable="true"
         android:src="@drawable/icon_left_arrow_black"
         android:tint="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/exerciseTopToolBar"
