Login + Logout funcionan!

--- a/QuickFitness/app/src/main/res/layout/fragment_profile.xml
+++ b/QuickFitness/app/src/main/res/layout/fragment_profile.xml
@@ -11,7 +11,7 @@
         android:id="@+id/editProfileButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="92dp"
         android:layout_marginEnd="36dp"
         android:drawableEnd="@drawable/ic_edit"
         android:text="@string/edit_profile"
@@ -22,11 +22,11 @@
         android:id="@+id/settingsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:drawableEnd="@drawable/ic_settings"
         android:text="@string/settings"
         app:layout_constraintEnd_toEndOf="@+id/editProfileButton"
-        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintStart_toStartOf="@+id/editProfileButton"
         app:layout_constraintTop_toBottomOf="@+id/editProfileButton" />
 
@@ -66,5 +66,16 @@
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profilePicture" />
+
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/logout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.765"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settingsButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
