Login Listo Error consultado con lo de recibir listas por apiService

--- a/QuickFitness/app/src/main/res/layout/item_routine_card.xml
+++ b/QuickFitness/app/src/main/res/layout/item_routine_card.xml
@@ -91,7 +91,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
                     android:layout_marginStart="36dp"
-                    android:text="@string/estimated_time"
+                    android:text="@string/difficulty"
                     android:textColor="#000000"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -99,7 +99,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/estimatedTime"
+                    android:id="@+id/difficulty"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
