--- a/QuickFitness/app/src/main/res/menu/bottom_menu.xml
+++ b/QuickFitness/app/src/main/res/menu/bottom_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/fragment_home"
+        android:id="@+id/fragment_routine_list"
         android:icon="@drawable/icon_home"
         android:title="@string/home" />
     <item
