--- a/QuickFitness/app/src/main/res/layout/item_routine_card.xml
+++ b/QuickFitness/app/src/main/res/layout/item_routine_card.xml
@@ -55,7 +55,7 @@
                     app:srcCompat="@drawable/icon_share_black" />
 
                 <ImageButton
-                    android:id="@+id/empty_fav"
+                    android:id="@+id/favButton"
                     android:layout_width="45dp"
                     android:layout_height="45dp"
                     android:layout_gravity="end|center"
@@ -154,7 +154,7 @@
                     android:textColor="#000000"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/start_routine"
+                    app:layout_constraintEnd_toStartOf="@+id/startRoutineButton"
                     app:layout_constraintHorizontal_bias="0.078"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -169,14 +169,14 @@
                     android:textColor="#000000"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/start_routine"
+                    app:layout_constraintEnd_toStartOf="@+id/startRoutineButton"
                     app:layout_constraintHorizontal_bias="0.085"
                     app:layout_constraintStart_toEndOf="@+id/textView8"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.333" />
 
                 <Button
-                    android:id="@+id/start_routine"
+                    android:id="@+id/startRoutineButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
