--- a/QuickFitness/app/src/main/res/layout/activity_exercise.xml
+++ b/QuickFitness/app/src/main/res/layout/activity_exercise.xml
@@ -30,6 +30,7 @@
         android:theme="?attr/actionBarTheme"
         app:layout_constraintBottom_toTopOf="@+id/bottomExerciseAppBar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -120,5 +121,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
         android:contentDescription="@string/exit" />
+
+    <fragment
+        android:id="@+id/fragment4"
+        android:name="ar.edu.itba.quickfitness.ExerciseFragment"
+        android:layout_width="421dp"
+        android:layout_height="561dp"
+        android:layout_marginTop="84dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomExerciseAppBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
