--- a/QuickFitness/app/src/main/res/layout-land/activity_login.xml
+++ b/QuickFitness/app/src/main/res/layout-land/activity_login.xml
@@ -125,7 +125,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginBottom="92dp"
+        android:background="@color/purple"
         android:text="@string/create_account"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.06"
