--- a/QuickFitness/app/src/main/res/layout/item_routine_card.xml
+++ b/QuickFitness/app/src/main/res/layout/item_routine_card.xml
@@ -182,6 +182,7 @@
                     android:layout_gravity="end"
                     android:backgroundTint="@color/purple"
                     android:text="@string/start_routine"
+                    android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.974"
