--- a/QuickFitness/app/src/main/res/layout/fragment_profile.xml
+++ b/QuickFitness/app/src/main/res/layout/fragment_profile.xml
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:text="Micky"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/editProfileButton"
