--- a/QuickFitness/app/src/main/res/layout-land/fragment_exercise.xml
+++ b/QuickFitness/app/src/main/res/layout-land/fragment_exercise.xml
@@ -39,24 +39,23 @@
         android:text="@string/description"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/exerciseDescription"
         app:layout_constraintEnd_toStartOf="@+id/imageView4"
         app:layout_constraintHorizontal_bias="0.099"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/exerciseDescription"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginStart="48dp"
-        android:layout_marginBottom="80dp"
         android:text="This is an exercise description"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description"
+        app:layout_constraintVertical_bias="0.401" />
 
     <TextView
         android:id="@+id/chrono"
